fixes to the front page hero on mobile

--- a/wp-content/themes/srwc-theme/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/srwc-theme/resources/assets/styles/components/_buttons.scss
@@ -1,5 +1,7 @@
 .btn,
-.comment-form input[type="submit"], .search-form .search-submit, .gform_wrapper .gform_footer input[type=submit] {
+.comment-form input[type="submit"],
+.search-form .search-submit,
+.gform_wrapper .gform_footer input[type=submit] {
   padding: 10px;
   color: #fff;
   background-color: $green;
@@ -29,7 +31,7 @@
     }
   }
 
-  &-darkgreen {
+  &.btn-darkgreen {
     background-color: $darkgreen;
 
     &:hover,
@@ -38,7 +40,7 @@
     }
   }
 
-  &-orange {
+  &.btn-orange {
     background-color: $orange;
 
     &:hover,
@@ -47,7 +49,7 @@
     }
   }
 
-  &-red {
+  &.btn-red {
     background-color: $red;
 
     &:hover,
